--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,6 @@
+body{
+	font-family: Helvetica, Tahoma, Arial, "Microsoft YaHei", "微软雅黑", SimSun, "宋体", STXihei, "华文细黑", Heiti, "黑体", sans-serif;
+}
 #footer{
 	position: fixed;
 	width: 100%;
