--- a/views/userBind.ejs
+++ b/views/userBind.ejs
@@ -9,5 +9,6 @@
 	    <label for="password">密码：</label>
 	    <input type="password" class="form-control" id="password" placeholder="密码为身份证后四位">
 	  </div>
-	  <button type="submit" class="btn btn-success">提交</button>
+	  <button type="button" class="btn btn-success submit">提交</button>
 	</form>
+<script src="/js/userBind.js"></script>
