--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -6,6 +6,6 @@
 	<link rel="stylesheet" type="text/css" href="/frame/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/frame/Flat/dist/css/flat-ui.min.css">
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
-	<script type="text/javascript" src="/frame/jquery.js"></script>
+	<script type="text/javascript" src="/frame/jquery-2.1.4.min.js"></script>
 </head>
 <body>
