--- a/views/userBind.ejs
+++ b/views/userBind.ejs
@@ -6,8 +6,8 @@
 	    <input type="number" class="form-control" id="studentId" placeholder="请输入学号">
 	  </div>
 	  <div class="form-group">
-	    <label for="password">密码：</label>
-	    <input type="password" class="form-control" id="password" placeholder="密码为身份证后四位">
+	    <label for="password">姓名：</label>
+	    <input type="text" class="form-control" id="password" placeholder="请输入您的真实姓名">
 	  </div>
 	  <button type="button" class="btn btn-success submit">提交</button>
 	</form>
