--- a/views/info.ejs
+++ b/views/info.ejs
@@ -3,10 +3,13 @@
 	<h1>毕业证件照</h1>
 	<img class="photo" src="{{= data.smallPic }}" alt="">
 	<div class="infoWrapper">
+		<p>姓名：{{= data.name}}</p>
+		<p>学号：{{= data.stuId}}</p>
 		<p>性别：{{= data.sex }}</p>
 		<p>学院：{{= data.academy }}</p>
 		<p>班级：{{= data.class}}</p>
 		<p>点击次数：{{= data.hitTimes }}</p>
 		<p>魅力值：{{= data.popularity }}</p>
+		<p><a href="/classlist">查看班级其他同学照片</a></p>
 	</div>
 {{ include ./layout/footer}}
