--- a/views/classList.ejs
+++ b/views/classList.ejs
@@ -13,7 +13,7 @@
 			<tr>
 				<th>{{= data[i].stuId }}</th>
 				<th>{{= data[i].name }}</th>
-				<th><a href="/info?stuId={{= data[i].stuId }}">查看</a></th>
+				<th><a href="/info?source=class&stuId={{= data[i].stuId }}">查看</a></th>
 			</tr>
 			{{ } }}
 		</tbody>
