--- a/views/userAuth.ejs
+++ b/views/userAuth.ejs
@@ -1,4 +1,3 @@
 {{ include layout/header }}
 <link rel="stylesheet" type="text/css" href="/css/userAuth.css">
-	<h2>您还未绑定学号！</h2>
-	<a href="/userbind" class="btn btn-success">点我绑定</a>
+	<h2>请关注我们微信公众号：u_anli 绑定查看照片</h2>
