--- a/views/info.ejs
+++ b/views/info.ejs
@@ -10,6 +10,6 @@
 		<p>班级：{{= data.class}}</p>
 		<p>点击次数：{{= data.hitTimes }}</p>
 		<p>魅力值：{{= data.popularity }}</p>
-		<!-- <p><a href="/classlist">查看班级其他同学照片</a></p> -->
+		<p><a href="/classlist">查看班级其他同学照片</a></p>
 	</div>
 {{ include ./layout/footer}}
