--- a/views/check/curriculum.ejs
+++ b/views/check/curriculum.ejs
@@ -1,3 +1,32 @@
 {{ include ../layout/header }}
-	<h1>课表查询</h1>
+<style type="text/css">
+	.room{
+		display: block;
+	}
+	th{
+		height: 50px;
+	}
+</style>
+<div class="table-responsive">
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				<th>上课时间</th>
+			{{ for(var i=0;i<7;i++){ }}
+				<th>{{= data[i].weekday }}</th>
+			{{ } }}
+			</tr>
+		</thead>
+		<tbody>
+			{{ for(var i=1,obj={1:'1~2',2:'3~4',3:'5~6',4:'7~8'};i<=4;i++){ }}
+			<tr>
+				<th>第{{=obj[i]}}结课</th>
+				{{ for(var j=0;j<7;j++){ }}
+					<th>{{= data[j][i+'_name'] }}<span class="room">{{= data[j][i+'_classroom'] }}</span></th>
+				{{ } }}	
+			</tr>
+			{{ } }}
+		</tbody>
+	</table>
+</div>
 {{ include ../layout/footer}}
