--- a/views/check/curriculum.ejs
+++ b/views/check/curriculum.ejs
@@ -20,7 +20,7 @@
 		<tbody>
 			{{ for(var i=1,obj={1:'1~2',2:'3~4',3:'5~6',4:'7~8'};i<=4;i++){ }}
 			<tr>
-				<th>第{{=obj[i]}}结课</th>
+				<th>第{{=obj[i]}}节课</th>
 				{{ for(var j=0;j<7;j++){ }}
 					<th>{{= data[j][i+'_name'] }}<span class="room">{{= data[j][i+'_classroom'] }}</span></th>
 				{{ } }}	
