--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -16,8 +16,8 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
-	        <li><a href="/active/index">活动 </a></li>
-	        <li><a href="/active/signup">报名 </a></li>
+	        <!-- <li><a href="/active/index">活动 </a></li>
+	        <li><a href="/active/signup">报名 </a></li> -->
 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">查询 <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
