--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -17,16 +17,16 @@
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
 	        <!-- <li><a href="/active/index">活动 </a></li>
-	        <li><a href="/active/signup">报名 </a></li> -->
+	        <li><a href="/active/signup">报名 </a></li> 
 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">查询 <span class="caret"></span></a>
-	          <ul class="dropdown-menu">
+	          <ul class="dropdown-menu">-->
 	            <li><a href="/check/curriculum">查课表</a></li>
 	            <li><a href="/check/grades">查成绩</a></li>
 	            <li><a href="/check/books">查图书</a></li>
 	            <li><a href="/check/classroom">查空教室</a></li>
-	          </ul>
-	        </li>
+	        <!--   </ul>
+	        </li> -->
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
